# temporal-agent-harness

./: .env.example  .gitignore  Dockerfile.sandboxed-tool-demo  LICENSE  README.md  justfile  pyproject.toml  temporal.local.toml
.github/: CODEOWNERS
docs/: agents-as-subagents.md
docs/design/: codeact-as-harness-toolset.md
docs/internal/: agent-annotations.md  agentevent-workflow-stream.md  agents-as-subagents.md  core-concepts.md  development.md  human-in-the-loop-tool-approvals.md  unified-subagent-event-stream.md  what-the-harness-adds.md
docs/superpowers/specs/: 2026-07-03-slack-connector-lambda-worker-design.md
examples/: app.py  session_manager_worker.py
examples/callback_tools/coding_agent/: README.md  agents.toml  justfile  tools.py  worker.py  workflow.py
examples/callback_tools/wiki_agent/: README.md  agents.toml  client.py  justfile  tools.py  worker.py  workflow.py
examples/chronicler/: .env.example  .gitignore  Procfile  README.md  agents.toml  app.py  chronicler_activities.py  chronicler_models.py  conversational_subagent_workflow.py  conversational_workflow.py  justfile  local_bridge.py  local_fs_tools.py  notifier.py  scribe_workflow.py  seed_session.py  session_manager_worker.py  wait_for_temporal.py  worker.py
examples/chronicler/sessions/: .gitignore
examples/monty/: .env.example  README.md  _host_driver.py  activities.py  agents.toml  app.py  conversational_gemini_subagent_workflow.py  conversational_gemini_workflow.py  conversational_subagent_workflow.py  conversational_workflow.py  justfile  models.py  monty_activities.py  session_manager_worker.py  travel_models.py  worker.py  workflow.py
examples/nexus_hello/: README.md  agents.toml  justfile  nexus_tool_service.py  tool_server.py  worker.py  workflow.py
examples/nexus_subagent_demo/: demo_parent_worker.py  demo_parent_workflow.py  dynamic_toolset.py  echo_worker.py  echo_workflow.py  justfile
examples/openai_hello/: README.md  agents.toml  justfile  worker.py  workflow.py
examples/openai_nexus/: README.md  agents.toml  justfile  nexus_transport.py  worker.py  workflow.py
examples/pydantic_ai_hello/: README.md  agents.toml  justfile  worker.py  workflow.py
examples/qa_agent/: README.md  agents.toml  justfile
examples/react_agent/: README.md  agents.toml  justfile  tool_activities.py  worker.py  workflow.py
examples/sandboxed_tool_demo/: README.md  agents.toml  justfile  tools.py  worker.py  workflow.py
examples/session_manager/: agent_registry.py  agents.toml  app.py  justfile  worker.py  workflow.py
nexus/: Makefile  go.work  go.work.sum
nexus/agent_adapter/agent_worker/: pyproject.toml  run_worker.py
nexus/agent_registry/: pyproject.toml
nexus/agent_registry/agent_registry/: __init__.py  agent_registry.nexusrpc.yaml  agent_registry_service.py  registry_service_handler.py  registry_workflow.py  run_worker.py
nexus/devserver/: config.yaml
nexus/durable_tools_gateway/: pyproject.toml
nexus/durable_tools_gateway/mcp_server/: __init__.py  main.py
nexus/durable_tools_gateway/nexus_mcp/: pyproject.toml
nexus/durable_tools_gateway/nexus_mcp/mcp_gateway/: __init__.py  inbound.py  tool_call.py  transport.py  workflow_transport.py
nexus/durable_tools_gateway/nexus_mcp/registry/: __init__.py  activities.py  registry.nexusrpc.yaml  registry.py  registry_service.py  registry_service_handler.py  utils.py
nexus/integration_tests/: Makefile  go.mod  go.sum  nexus_agent_durability_test.go  nexus_connector_durability_test.go  test_utils.go
nexus/mcp/: pyproject.toml
nexus/mcp/authoring/: __init__.py
nexus/mcp/durable_tools_gateway/: __init__.py  activities.py  inbound.py  registry.nexusrpc.yaml  registry.py  registry_service.py  registry_service_handler.py  server.py  tool_call.py
nexus/mcp/transport/: __init__.py  workflow_transport.py
nexus/messaging_connector/: Makefile  go.mod  slack_app_manifest.yaml
nexus/model_router/: README.md  __init__.py  activities.py  handler.py  justfile  models.py  service.py  worker.py  workflow.py
nexus/slack_connector/: .gitignore  Makefile  go.mod  go.sum
nexus/subagents/: pyproject.toml
nexus/subagents/subagents/: __init__.py
nexus/subagents/subagents/registry/: __init__.py  agent_registry_service.py  discovery.py  registration.py  toolset.py
nexus/subagents/subagents/transport/: __init__.py  nexus_agent_service.py  transport.py  turn_driver.py
nexus/tests/: conftest.py  test_agent_registry_nexus.py
nexus/ui_connector/: .gitignore  Makefile  go.mod  go.sum
nexus/ui_connector/teams_activity_worker/: README.md  pyproject.toml
nexus/ui_connector/teams_activity_worker/src/teams_activity_worker/: __init__.py  __main__.py  cards.py  contracts.py  platform.py  worker.py
nexus/ui_connector/teams_activity_worker/tests/: test_cards.py  test_config.py  test_contracts.py  test_platform.py  test_worker.py
temporal_agent_harness/: __init__.py
temporal_agent_harness/ai_sdks/: __init__.py  openai_agents_harness.py  pydantic_ai_harness.py
temporal_agent_harness/harness/: __init__.py  agent.py  agent_client.py  agent_workflow.py  sandbox_ref.py  slash_commands.py  stream_context.py  subagent_activities.py  subagent_toolset.py  subagent_transport.py
temporal_agent_harness/ui/: __init__.py
temporal_agent_harness/utils/: __init__.py  large_payload.py
temporal_agent_harness/web/: __init__.py  app.py  registry.py  session_manager.py  worker.py
tests/ai_sdks/: test_openai_agents_plugin.py
tests/harness/: _real_sandbox_workflow_fixtures.py  _sandboxed_tool_fixtures.py  test_agent_tool.py  test_agent_workflow_runner.py  test_callback_tools.py  test_code_mode.py  test_code_mode_stubs.py  test_event_discriminator_serialization.py  test_sandboxed_tools.py  test_stream_merge.py  test_subagents.py  test_tool_approvals.py
tests/nexus/: test_agent_registry.py
tests/utils/: test_large_payload.py
tests/web/: test_packaged_ui.py
ui/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/docs/: api.md
ui/scripts/: check-svelte5-syntax.mjs
ui/src/: App.svelte  app.css
(+259 files in other folders)
