[project]
name = "nexus-mcp"
version = "0.1.0"
description = "Bridge MCP tools with Temporal's reliable workflow execution via Nexus RPC"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.0.0",
    "mcp>=1.28.1",
    "nexus-rpc>=1.1.0",
    "pydantic>=2.0",
    "temporalio>=1.15.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["transport*", "durable_tools_gateway*", "authoring*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
]
