[project]
name = "nexus-agent-worker"
version = "0.1.0"
description = "Generic harness agent worker for the Nexus agent-adapter"
requires-python = ">=3.11"
dependencies = [
    "temporalio>=1.27.2",
    "temporal-agent-harness[genai]",
]

[tool.uv.sources]
temporal-agent-harness = { path = "../../..", editable = true }
