[project]
name = "teams-activity-worker"
version = "0.1.0"
description = "Temporal activity worker for Microsoft Teams outbound messaging"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "microsoft-teams-apps>=2.0.14,<3",
    "temporalio>=1.15.0,<2",
]

[project.scripts]
teams-activity-worker = "teams_activity_worker.platform:main"

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/teams_activity_worker"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["src", "tests"]
